<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/movie" />

    <item
        android:id="@+id/menu_tv"
        android:icon="@drawable/ic_tv_black_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/tv" />

    <item
        android:id="@+id/menu_movieFavorite"
        android:icon="@drawable/ic_stars_black_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/movie_favorite" />

    <item
        android:id="@+id/menu_tvFavorite"
        android:icon="@drawable/ic_stars_black_24dp"
        app:showAsAction="collapseActionView"
        android:title="@string/tv_favorite" />

</menu>
