<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_klik_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_imgfavorit"
                android:layout_width="150dp"
                android:layout_height="280dp"
                android:contentDescription="@string/image"
                android:background="@drawable/background5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_titlefavorit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_datefavorit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLength="50"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tv_votefavorit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLength="50"
                    android:text="@string/vote" />

                <TextView
                    android:id="@+id/tv_originallanguagefavorit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLength="50"
                    android:text="@string/original_language" />

                <TextView
                    android:id="@+id/tv_popularityfavorit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLength="50"
                    android:text="@string/popularity" />

                <TextView
                    android:id="@+id/tv_overviewfavorit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLength="50"
                    android:text="@string/overview" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_detailfavorit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:background="@drawable/background3"
                        android:text="@string/detail"
                        android:contentDescription="@string/button"
                        android:textColor="@color/blue"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btn_sharefavorit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="1"
                        android:background="@drawable/background3"
                        android:text="@string/share"
                        android:contentDescription="@string/button"
                        android:textColor="@color/blue"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>